fix bug of invisible layer still displayed and blocking page interaction, bump version patch number

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* hide popup */
-body .tp-modal .tp-iframe-wrapper {
-  display: none;
+body .tp-modal {
+  display: none !important;
 }
 
 /* remove gray background */
